# kernel-driver-rs

./: README.md
kernel-driver/: Cargo.toml  Makefile.toml  build.rs  kernel_driver.inx  rustfmt.toml
kernel-driver/.cargo/: config.toml
kernel-driver/src/: lib.rs  thread.rs
tools/: AddCert-AndInstall.ps1  Display-PnpDrivers.ps1  Install-Driver.ps1  Install-TestCert.ps1  Remove-Driver.ps1  Remove-TestCert.ps1  Sign-Device.ps1  Verify-Signature.ps1
