[package]
name = "kernel-driver"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
build = "build.rs"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
anyhow = "1.0.89"
paste = "1.0.14"
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-build = "0.4.0"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"

[build-dependencies]
anyhow = "1.0.89"
wdk-build = "0.4.0"

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"